# nfs4xdr-acl-tools

./: COPYING  INSTALL  Makefile  README  TODO  VERSION  aclocal.m4  configure  configure.ac  install-sh
autom4te.cache/: output.0  requests  traces.0
debian/: changelog  control  copyright  rules  watch
include/: Makefile  builddefs  builddefs.in  buildmacros  config.h  config.h.in  libacl_nfs4.h  nfs4.h  nfs41acl.h  nfs4_json.h
libnfs41acl/: .cvsignore  Makefile  acl_nfs4_copy_acl.c  acl_nfs4_get_whotype.c  acl_nfs4_xattr_size.c  libnfs4acl.la  nfs4_ace_from_string.c  nfs4_acl_for_path.c  nfs4_acl_spec_from_file.c  nfs4_get_ace_access.c  nfs4_get_ace_type.c  nfs4_new_acl.c  nfs4_print_acl.c
libnfs4acl/: Makefile  acl_nfs4_copy_acl.c  acl_nfs4_get_who.c  acl_nfs4_inheritance.c  acl_nfs4_set_who.c  acl_nfs4_support_bsd.c  acl_nfs4_xattr_load.c  acl_nfs4_xattr_pack.c  libnfs4acl.la  nfs41acl_xdr.c  nfs4_ace_from_string.c  nfs4_ace_from_text_bsd.c  nfs4_ace_to_json.c  nfs4_ace_to_text_bsd.c  nfs4_acl_for_path.c  nfs4_acl_utils.c  nfs4_aclflag_text.c  nfs4_free_acl.c  nfs4_get_ace_flags.c  nfs4_get_acl.c  nfs4_insert_file_aces.c  nfs4_insert_string_aces.c  nfs4_json_to_acl.c  nfs4_new_ace.c  nfs4_print_ace.c  nfs4_print_ace_verbose.c  nfs4_print_acl.c  nfs4_print_acl_json.c  nfs4_remove_file_aces.c  nfs4_remove_string_aces.c  nfs4_set_acl.c  strtoul_reals.c
m4/: Makefile  package_attrdev.m4  package_utilies.m4
man/: Makefile
nfs4xdr_getfacl/: Makefile  nfs4xdr_getfacl.c
nfs4xdr_setfacl/: Makefile  nfs4xdr_setfacl.c
nfs4xdr_torture/: Makefile  nfs4xdr_torture.c  torture.h
nfs4xdr_winacl/: Makefile  (+1 more)
(+10 files in other folders)
